[project]
name = "healthlink"
version = "1.0.0"
description = "Smart Health Management System with AI-powered symptom analysis and doctor recommendations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI and Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    # LangChain with Google GenAI
    "langchain>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-google-genai>=3.0.0",
    # Vector Store
    # Database
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.3",
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    # Streamlit UI
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pinecone>=9.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
]

[project.scripts]
healthlink = "main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "config*", "core*", "ui*", "utils*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
managed = true
